# TypingMind-Youtube-Summarizer-Server

./: .gitignore  README.md  main.py  pyproject.toml
youtube_summarizer/: models.py  routes.py  services.py
