[project]
name = "typingmind-plugin-server"
version = "0.1.0"
description = "A FastAPI server for various TypingMind plugins."
authors = [
    {name = "Ben Tran",email = "khoit12@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "youtube-transcript-api (>=1.2.2,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
